# test-ci

./: .pre-commit-config.yaml  .pre-commit-config.yml  README.md  pyproject.toml  requirements.txt  test_terraform.tf  var.tf  versions.tf
.github/workflows/: base.yml
src/: pyproject.toml  requirements.txt
src/tests/: test_something.py
tests/: test.py
