[tool.poetry]
name = "test-ci"
version = "0.1.0"
description = ""
authors = ["Anton Eremin"]
readme = "README.md"
packages = [{include = "test_ci"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
pydantic = "^1.10.8"
jz = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
